internal/services/testdata/golden/grpcroute-preview/grpc-failover-external-backends.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  labels:
    app.kubernetes.io/managed-by: fastgateway
    fastgateway.dev/gateway-id: 22222222-2222-2222-2222-222222222222
    fastgateway.dev/route-id: 11111111-1111-1111-1111-111111111111
  name: grpc-failover-external-11111111
  namespace: gateway-ns
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: eg
    namespace: gateway-ns
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: grpc-failover-external-11111111-backend-0
      port: 9000
      weight: 100
    - group: gateway.envoyproxy.io
      kind: Backend
      name: grpc-failover-external-11111111-backend-1
      port: 9443
    matches:
    - method:
        method: Ping
        service: echo.Echo
        type: Exact
status:
  parents: null
